--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -23,6 +23,8 @@
         <attr name="cvTextSize" format="integer" />
         <attr name="cvEms" format="integer" />
         <attr name="cvTitleMinEms" format="integer" />
+        <attr name="cvTextColor" format="reference|color" />
+
         <attr name="necessarySymbol">
             <!-- Visible on screen; the default value. -->
             <enum name="visible" value="0x00000000" />
