--- a/app/src/main/res/layout/fragment_bet_station.xml
+++ b/app/src/main/res/layout/fragment_bet_station.xml
@@ -88,43 +88,17 @@
                 </LinearLayout>
 
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="14dp"
-                    android:layout_weight="1"
-                    android:drawableLeft="@drawable/ic_withdraw"
-                    android:drawablePadding="5dp"
-                    android:fontFamily="@font/helvetica_bold"
-                    android:text="@string/withdraw_amount"
-
-                    android:textColor="@color/color_BBBBBB_333333"
-                    android:textSize="@dimen/textSize14sp"
-                    android:textStyle="bold" />
-
                 <org.cxct.sportlottery.ui.login.LoginEditText
                     android:id="@+id/et_amount"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
                     app:cvDividerColor="@color/transparent"
                     app:cvHint="@string/edt_hint_deposit_money"
-                    app:cvTextColor="@color/color_414655"
                     app:cvInputType="number"
+                    app:cvTextColor="@color/color_414655"
                     app:cvTitle="@string/withdraw_amount" />
 
-                <!-- 扣除金额 -->
-                <TextView
-                    android:id="@+id/tv_commission_title"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="14dp"
-                    android:drawableLeft="@drawable/ic_deduction"
-                    android:drawablePadding="5dp"
-                    android:fontFamily="@font/helvetica_bold"
-                    android:text="@string/commission_deducted_amount"
-                    android:textColor="@color/color_BBBBBB_333333"
-                    android:textSize="@dimen/textSize14sp"
-                    android:textStyle="bold" />
 
                 <LinearLayout
                     android:id="@+id/ll_commission"
@@ -139,27 +113,21 @@
                     android:visibility="visible">
 
                     <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="扣款金额"
+                        android:textColor="@color/color_414655"
+                        android:textSize="@dimen/textSize14sp" />
+
+                    <TextView
                         android:id="@+id/tv_commission"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
+                        android:layout_marginStart="@dimen/margin_15"
                         android:layout_weight="1"
                         android:gravity="center_vertical"
                         android:textColor="@color/color_F75452_b73a20"
                         android:textSize="@dimen/textSize12sp" />
-
-                    <TextView
-                        android:id="@+id/tv_detail"
-                        android:layout_width="wrap_content"
-                        android:layout_height="22dp"
-                        android:layout_marginEnd="10dp"
-                        android:background="@drawable/selector_commission_detail_button"
-                        android:enabled="false"
-                        android:gravity="center"
-                        android:paddingHorizontal="10dp"
-                        android:text="@string/commission_detail"
-                        android:textColor="@color/selector_blue_light_gray"
-                        android:textSize="@dimen/textSize12sp"
-                        android:textStyle="bold" />
 
                     <ImageView
                         android:id="@+id/btn_info"
@@ -167,22 +135,23 @@
                         android:layout_height="16dp"
                         android:contentDescription="@null"
                         android:gravity="center"
-                        android:src="@drawable/icon_info" />
+                        android:src="@drawable/ic_icon_exp" />
+
+
+                    <TextView
+                        android:id="@+id/tv_detail"
+                        android:layout_width="wrap_content"
+                        android:layout_height="22dp"
+                        android:layout_marginEnd="10dp"
+                        android:enabled="false"
+                        android:gravity="center"
+                        android:paddingHorizontal="4dp"
+                        android:text="@string/log_detail_title"
+                        android:textColor="@color/color_6C7BA8"
+                        android:textSize="@dimen/textSize14sp" />
 
                 </LinearLayout>
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="14dp"
-                    android:layout_weight="1"
-                    android:drawableLeft="@drawable/ic_password_green"
-                    android:drawablePadding="5dp"
-                    android:fontFamily="@font/helvetica_bold"
-                    android:text="@string/withdraw_password"
-                    android:textColor="@color/color_BBBBBB_333333"
-                    android:textSize="@dimen/textSize14sp"
-                    android:textStyle="bold" />
 
                 <org.cxct.sportlottery.ui.login.LoginEditText
                     android:id="@+id/et_password"
@@ -192,6 +161,8 @@
                     app:cvHint="@string/hint_please_enter_withdraw_password"
                     app:cvInputType="textPassword"
                     app:cvMarginBottom="8dp"
+                    app:cvTextColor="@color/color_414655"
+                    app:cvTitle="@string/withdraw_password"
                     app:cvTitleTextStyle="bold" />
 
             </LinearLayout>
@@ -470,10 +441,10 @@
                 android:id="@+id/btn_submit"
                 android:layout_width="match_parent"
                 android:layout_height="44dp"
+                android:layout_gravity="center"
                 android:layout_margin="18dp"
-                android:background="@drawable/bg_radius_4_button_dusk"
+                android:background="@drawable/ic_submit"
                 android:gravity="center"
-                android:paddingBottom="9dp"
                 android:text="@string/submit"
                 android:textAllCaps="true"
                 android:textColor="@color/color_FFFFFF_FFFFFF"
