--- a/app/src/main/res/layout/fragment_bet_station.xml
+++ b/app/src/main/res/layout/fragment_bet_station.xml
@@ -21,7 +21,6 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/color_191919_FCFCFC"
                 android:orientation="vertical">
 
 
@@ -163,69 +162,76 @@
                     app:cvMarginBottom="8dp"
                     app:cvTextColor="@color/color_414655"
                     app:cvTitle="@string/withdraw_password"
-                    app:cvTitleTextStyle="bold" />
+                 />
 
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="1dp"
+                android:background="@color/exo_white"
                 android:orientation="vertical"
                 android:paddingHorizontal="18dp"
-                android:paddingTop="20dp"
                 android:paddingBottom="10dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="@dimen/margin_50"
+                    android:layout_gravity="center|left"
+                    android:gravity="center">
 
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:drawableLeft="@drawable/ic_map"
+                        android:layout_weight="0.5"
                         android:drawablePadding="5dp"
                         android:fontFamily="@font/helvetica_bold"
                         android:text="@string/select_area"
-                        android:textColor="@color/color_BBBBBB_333333"
-                        android:textSize="@dimen/textSize14sp"
-                        android:textStyle="bold" />
-
-                    <TextView
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="7dp"
-                        android:layout_weight="1"
-                        android:drawableLeft="@drawable/ic_building"
-                        android:drawablePadding="5dp"
-                        android:fontFamily="@font/helvetica_bold"
-                        android:text="@string/select_city"
-                        android:textColor="@color/color_BBBBBB_333333"
-                        android:textSize="@dimen/textSize14sp"
-                        android:textStyle="bold" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                        android:textColor="@color/color_414655"
+                        android:textSize="@dimen/textSize14sp" />
 
                     <org.cxct.sportlottery.ui.component.StatusSpinnerView
                         android:id="@+id/spinner_area"
                         android:layout_width="0dp"
                         android:layout_height="44dp"
+                        android:layout_gravity="center|left"
                         android:layout_weight="1"
-                        android:background="@drawable/bg_radius_4_button_white"
-
                         app:defaultStatusText="@string/waiting" />
+
+
+                </LinearLayout>
+
+                <View
+                    android:layout_width="wrap_content"
+                    android:layout_height="1dp"
+                    android:background="@color/color_141414_F3F4F5" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/margin_50"
+                    android:gravity="center">
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="0.5"
+                        android:drawablePadding="5dp"
+                        android:fontFamily="@font/helvetica_bold"
+                        android:text="@string/select_city"
+                        android:textColor="@color/color_414655"
+                        android:textSize="@dimen/textSize14sp" />
+
 
                     <org.cxct.sportlottery.ui.component.StatusSpinnerView
                         android:id="@+id/spinner_city"
                         android:layout_width="0dp"
                         android:layout_height="44dp"
-                        android:layout_marginLeft="7dp"
+                        android:layout_gravity="center|left"
                         android:layout_weight="1"
-                        android:background="@drawable/bg_radius_4_button_white"
                         app:defaultStatusText="@string/waiting" />
+
+
                 </LinearLayout>
 
                 <androidx.recyclerview.widget.RecyclerView
