--- a/app/src/main/res/layout/view_game_tab_match_type_v4.xml
+++ b/app/src/main/res/layout/view_game_tab_match_type_v4.xml
@@ -2,22 +2,23 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:elevation="1dp"
-    android:background="@color/color_141414_F3F4F5">
+    android:elevation="1dp">
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tabLayout"
         android:layout_width="match_parent"
-        android:layout_height="56dp"
+        android:layout_height="match_parent"
+        android:paddingHorizontal="9dp"
         android:overScrollMode="never"
         app:layout_constraintTop_toTopOf="parent"
         app:tabMaxWidth="150dp"
-        app:tabPaddingStart="0dp"
-        app:tabPaddingEnd="0dp"
+        app:tabPaddingStart="9dp"
+        app:tabPaddingEnd="9dp"
         app:tabGravity="fill"
-        app:tabIndicatorHeight="0dp"
+        app:tabIndicatorFullWidth="false"
+        app:tabIndicator="@drawable/bg_matchtype_indicator"
         app:tabMinWidth="52dp"
         app:tabMode="scrollable"
         app:tabRippleColor="@null"
