--- a/app/src/main/res/layout/fragment_game_v3.xml
+++ b/app/src/main/res/layout/fragment_game_v3.xml
@@ -56,7 +56,7 @@
                 <LinearLayout
                     android:id="@+id/ll_sport_type"
                     android:layout_width="match_parent"
-                    android:layout_height="88dp"
+                    android:layout_height="wrap_content"
                     android:background="@color/color_191919_FCFCFC"
                     android:gravity="center_horizontal"
                     tools:ignore="MissingConstraints">
